--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         node-version: 18
     - name: Install dependencies
-      run: pnpm run lint && pnpm run build
+      run: npm install && npm run lint && npm run build
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
