--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -7,6 +7,8 @@ on:
   release:
     types: [created]
 
+concurrency: ${{ github.workflow}}-${{github.ref}}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,4 +32,4 @@ jobs:
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: 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
