--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playwright",
+  "name": "pwf",
   "version": "1.0.0",
   "description": "## Installation",
   "main": "index.js",
@@ -8,7 +8,6 @@
   "license": "ISC",
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
-    "@playwright/test": "^1.41.2",
     "@types/node": "^20.11.17",
     "tsup": "^8.0.2"
   },
@@ -20,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.4.4",
     "playwright": "^1.41.2",
+    "@playwright/test": "^1.41.2",
     "pnpm": "^8.15.2",
     "typescript": "^5.3.3"
   }
